...
                    'About',
                    style: Get.textTheme.bodyMedium!.copyWith(
                        color: Colors.white, fontWeight: FontWeight.w700),
                  )),
                  if (!stateController.expanded)
                    IconButton(
                      key: Key('edit_button'),
                      icon: const Icon(
                        Icons.edit,
                        color: Colors.white,
                        size: 16,
                      ),
                      onPressed: () {
...
                            .getProfile(state.profile);
                        context.read<ProfileControllerCubit>().reverseExpand();
                      },
                    )
                  else
                    TextButton(
                      key: Key('save_button'),
                      onPressed: () {
                        context.read<ProfileBloc>().add(
                            UpdateProfile(profile: stateController.profile));
                        context.read<ProfileControllerCubit>().reverseExpand();
                      },
                      child: GradientText(
...
        return Row(
          crossAxisAlignment: CrossAxisAlignment.center,
          mainAxisSize: MainAxisSize.max,
          children: [
            Expanded(
              child: Text(
                'Weight:',
                style: Get.textTheme.bodyMedium!.copyWith(
                  color: ColorHelper.subtitleText,
                  fontWeight: FontWeight.w500,
                ),
              ),
            ),
            Expanded(
              flex: 2,
              child: TextFormField(
                key: Key('weight_input'),
                onChanged: (value) {
                  context
                      .read<ProfileControllerCubit>()
                      .setWeight(int.tryParse(value) ?? 0);
                },
                keyboardType: TextInputType.number,
...
        return Row(
          crossAxisAlignment: CrossAxisAlignment.center,
          mainAxisSize: MainAxisSize.max,
          children: [
            Expanded(
              child: Text(
                'Height:',
                style: Get.textTheme.bodyMedium!.copyWith(
                    color: ColorHelper.subtitleText,
                    fontWeight: FontWeight.w500),
              ),
            ),
            Expanded(
              flex: 2,
              child: TextFormField(
                key: Key('height_input'),
                initialValue: state.profile.height.toString(),
                textAlign: TextAlign.right,
                keyboardType: TextInputType.number,
                onChanged: (value) {
                  context
                      .read<ProfileControllerCubit>()
...
                ),
              ),
            ),
            Expanded(
              flex: 2,
              child: TextFormField(
                key: Key('username_input'),
                initialValue: state.profile.username,
                textAlign: TextAlign.right,
                onChanged: (value) {
                  context.read<ProfileControllerCubit>().setUsername(value);
                },
                style: Get.textTheme.bodyMedium!
...
