...

  @override
  Widget build(BuildContext context) {
    return Padding(
      padding: EdgeInsets.symmetric(horizontal: 16),
      child: TextButton(
        key: Key('register_button'),
        onPressed: () {
          if (formKey.currentState!.validate()) {
            context.read<AuthBloc>().add(
                  RegisterAuth(
                    username: controllerUsername.value.text,
                    email: controllerEmail.value.text,
...

  @override
  Widget build(BuildContext context) {
    return Padding(
      padding: EdgeInsets.symmetric(horizontal: 23),
      child: TextFormField(
        key: Key("confirm_password_input"),
        controller: widget.controllerConfirmPassword,
        validator: (value) {
          if (value != widget.controllerPassword.value.text) {
            return 'different password';
          } else if (value == '') {
            return 'password cannot be empty';
...
