...
            child: Row(
              mainAxisSize: MainAxisSize.max,
              children: [
                Expanded(
                  flex: 1,
                  child: TextButton(
                    key: Key('logout_button'),
                    onPressed: () {
                      context.read<ProfileBloc>().add(LogoutProfile());
                      context.read<AuthBloc>().add(LogoutAuth());
                    },
                    child: Row(
                      mainAxisSize: MainAxisSize.min,
...
